<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.screens.ui.login.LoginFragment"
        android:label="@string/login_window" >
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.screens.ui.welcome.WelcomeFragment"
        android:label="@string/welcome_window"
        tools:layout="@layout/welcome_fragment" >
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.udacity.shoestore.screens.ui.instructions.InstructionsFragment"
        android:label="@string/instructions_window"
        tools:layout="@layout/instructions_fragment" >
        <action
            android:id="@+id/action_instructionsFragment_to_scrollingFragment"
            app:destination="@id/scrollingFragment" />
    </fragment>
    <fragment
        android:id="@+id/scrollingFragment"
        android:name="com.udacity.shoestore.screens.ui.shoelist.ScrollingFragment"
        android:label="@string/scrolling_window" >
        <action
            android:id="@+id/action_scrollingFragment_to_itemDetailFragment"
            app:destination="@id/itemDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/itemDetailFragment"
        android:name="com.udacity.shoestore.screens.ui.shoelist.itemdetail.ItemDetailFragment"
        android:label="@string/item_detail_window" >
        <action
            android:id="@+id/action_itemDetailFragment_to_scrollingFragment"
            app:destination="@id/scrollingFragment"
            app:popUpTo="@id/scrollingFragment" />
    </fragment>
</navigation>