<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

        <data>
            <variable
                name="welcomeViewModel"
                type="com.udacity.shoestore.screens.ui.welcome.WelcomeViewModel"
                />
        </data>
    <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/welcome_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.ui.welcome.WelcomeFragment">

    <TextView
        android:id="@+id/welcome_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/description_msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <TextView
        android:id="@+id/description_msg"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/shoe_description"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/goto_instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_msg" />

    <Button
        android:id="@+id/goto_instructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/get_instructions"
        android:onClick="@{() ->welcomeViewModel.onSelectInstructions()}"
        style="@style/whiteBox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_msg" />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>
